# reward-hacking-toy-models

./: pyproject.toml
docs/: plan.md
notebooks/: 2025-11-09-16-10_Session.ipynb
src/: analyze_results.py  run_experiments.py  track1_simulation.py
src/results/: simulation_results_test.pkl
src/simulation/: test_quick.py
